# tracking_algorithm

./: .gitignore  CMakeLists.txt
matlab/Kalman/: EKF.m  KalmanFilter.m  main.m  target_trajectory.m  tracking.m  verify.m
matlab/LeastSquare/: AnglePrediction.asv  AnglePrediction.m  ClosedLoop_Sim.m  CubicFunc_Fitting.m  LFMCW_Radar.m  LinearFunc_Fitting.m  QuadFunc_Fitting.m  radar_MTI_MTD.m
scripts/: tracking_sim.ipynb  tracking_sim.md
scripts/.ipynb_checkpoints/: tracking_sim-checkpoint.ipynb
scripts/auto_zoom/: blurring.py
scripts/tracking/: DPA.py  EKF.py  JDPA.py  airport_cz.py  distance.py  powerful_light_src.py  tracking_sim.ipynb  tracking_sim.md
src/: main.cc
src/AutoZoom/: AutoZoom.cc  AutoZoom.h  ImgDef.cc  ImgDef.h  typedef.h
